# web-packager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
scripts/: package_dist.sh
sfx/: sfx_packager.cc  sfx_stub.cc
src/: i18n.hh  main.cc  project_generator.hh  web_packager.cc  web_packager.hh
